align footer and fix formatting a bit

--- a/css/style.css
+++ b/css/style.css
@@ -23,4 +23,5 @@
   height: 60px;
   line-height: 60px;
   background-color: #f5f5f5;
+  text-align: center;
 }
